// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The button component renders a anchor when prop \`type\` is link 1`] = `
<a
  className="btn btn--primary btn--rectangle "
  href="https://ultimaker.com/"
  id="testButton"
>
  <span
    className="text"
  >
    Button text
  </span>
</a>
`;

exports[`The button component should render 1`] = `
<button
  className="btn btn--primary btn--rectangle "
  id="testButton"
  onClick={[Function]}
  type="button"
>
  <span
    className="text"
  >
    Button text
  </span>
</button>
`;
